@@ -966,7 +966,8 @@ s/bn_quarterpi/M_PI_4/g
 s/bn_invpi/M_1_PI/g
 s/bn_inv2pi/M_1_2PI/g
 s/bn_inv4pi/M_1_4PI)/g
-s/bn_inv255/BN_INV255/g'
+s/bn_inv255/BN_INV255/g
 s/bn_degtorad/DEG2RAD/g
 s/bn_radtodeg/RAD2DEG/g
+s/bn_sin_scale/(BN_SINTABSIZE \/ M_2PI)/g
         eliminated a number of libbn globals in favor of existing constants
